Adicionados arquivos SCSS em seus respectivos components

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,313 +1,11 @@
 @import "_reset";
 @import "_variables";
 @import "mixins";
-
-html {
-  font-size: 62.5%;
-  font-family: 'Poppins', sans-serif;
-  scroll-behavior: smooth;
-}
-
-.hero {
-  background: #daffee;
-  padding: 21rem 0;
-  &__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media screen and (max-width: 1170px) {
-      flex-direction: column;
-      gap: 32px;
-    }
-  }
-  &__text {
-    max-width: 850px;
-    h2 {
-      font-size: 5.6rem;
-      font-weight: 800;
-      color: $greenDark;
-      text-transform: uppercase;
-      margin-bottom: 36px;
-      @media screen and (max-width: 768px) {
-        font-size: 4.5rem;
-      }
-      span {
-        font-size: inherit;
-        color: $greenLight;
-      }
-    }
-    h4 {
-      font-size: 3.2rem;
-      font-weight: 600;
-      color: $greenDark;
-      margin-bottom: 36px;
-      @media screen and (max-width: 768px) {
-        font-size: 2.4rem;
-      }
-    }
-    span {
-      color: $textColor;
-      font-size: 1.8rem;
-    }
-  }
-}
-
-
-.benefits {
-  &__content {
-    display: grid;
-    gap: 24px;
-    margin-top: -5rem;
-    grid-template-columns: repeat(6, 1fr);
-    @media screen and (max-width: 1280px) {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    @media screen and (max-width: 768px) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-    &.no-margin {
-      margin-top: 64px;
-      grid-template-columns: repeat(4, 1fr);
-      @media screen and (max-width: 1280px) {
-        grid-template-columns: repeat(3, 1fr);
-      }
-      @media screen and (max-width: 768px) {
-        grid-template-columns: repeat(1, 1fr);
-      }
-      .benefits__box {
-        min-height: 220px;
-      }
-    }
-  }
-  &:nth-child(1) {
-    padding: 120px 0;
-  }
-  &__title {
-    font-size: 4.2rem;
-    font-weight: 700;
-    color: $greenDark;
-    text-align: center;
-    text-transform: uppercase;
-    span {
-      display: block;
-      color: $greenLight;
-    }
-  }
-  
-  &__box {
-    background-color: #fff;
-    border-bottom: 2px solid $borderLine;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px 16px;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    box-shadow: 0px 5px 10px rgba(0,0,0, .3);
-    min-width: 200px;
-    span {
-      font-size: 1.6rem;
-      font-weight: 600;
-      color: $textColor;
-      text-align: center;
-      line-height: 20px
-    }
-  }
-}
-
-.about {
-  margin-top: 5rem;
-  margin-bottom: 2.5rem;
-  &__title {
-    display: block;
-    margin-bottom: 80px;
-    h2 {
-      font-size: 4.2rem;
-      text-align: center;
-      span {
-        font-weight: 800;
-      }
-    }
-  }
-  &__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-    @media screen and (max-width: 1170px) {
-      flex-direction: column;
-      text-align: center;
-      button {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-    .text {
-      font-size: 1.8rem;
-      line-height: 24px;
-      letter-spacing: .5px;
-    }
-  }
-}
-
-.garantee {
-  &__title {
-    font-size: 4.2rem;
-    font-weight: 700;
-    text-align: center;
-    text-transform: uppercase;
-    color: $greenDark;
-    line-height: 64px;
-    @media screen and (max-width: 768px) {
-      font-size: 3.2rem;
-    }
-  }
-  &__subtitle {
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-align: center;
-    margin-bottom: 8rem;
-  }
-  &__content {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 32px;
-    &--box {
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-      gap: 32px;
-      border-radius: 18px;
-      padding: 24px;
-      box-shadow: 0px 0px 2px rgba(0,0,0, .15);
-      transition: box-shadow ease .3s;
-      @media screen and (max-width:768px) {
-        flex-direction: column;
-        align-items: center;
-      }
-      &:hover {
-        box-shadow: 0px 0px 8px rgba(0,0,0, .15);
-      }
-      .text {
-        p {
-          font-size: 2.2rem;
-          font-weight: 600;
-          text-align: left;
-          color: $greenDark
-        }
-        span {
-          font-size: 1.6rem;
-          color: $textColor;
-          text-align: left;
-          line-height: 24px;
-        }
-      }
-    }
-  }
-}
-
-.nothing {
-  background-color: $greenDark;
-  color: #fff;
-  box-shadow: 5px 10px 15px rgba(0, 0, 0,.3);
-  padding-bottom: 40px;
-  &__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media screen and (max-width: 1024px) {
-      flex-direction: column;
-    }
-    img {
-      margin-top: -50px;
-    }
-    &--text {
-      margin-left: 80px;
-      text-align: center;
-      @media screen and (max-width: 1024px) {
-        margin-left: 0;
-      }
-      h3 {
-        font-size: 4.2rem;
-        text-transform: uppercase;
-        font-weight: 700;
-        margin-bottom: 24px;
-      }
-      p {
-        font-size: 1.8rem;
-        font-weight: 400;
-        margin-bottom: 24px;
-      }
-      b {
-        font-weight: 700;
-        font-size: 2rem
-      }
-    }
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import "hero";
+@import "benefits";
+@import "about";
+@import "garantee";
+@import "nothing";
 
 
 button {
