--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,12 @@ $sectionGrey: #f8f8f8;
 $sectionGreen: linear-gradient(0deg, rgba(158,242,200,1) 50%, rgba(255,255,255,1) 100%);
 $commentBg: #e6c9ec;
 
+html {
+  font-size: 62.5%;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
