--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -28,3 +28,13 @@ html {
     max-width: 100%;
   }
 }
+
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(38,201,33, 0.3);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(38,201,33, 0);
+  }
+}
